--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
             function main(ticket, valueIncrease) {
                 const ticketCount = getTicket(ticket);
                 let newTicketCount = ticketCount
-                if (valueIncrease == true) {
-                    newTicketCount = ticketCount + 1;
-                }
-                else if (valueIncrease == false && ticketCount > 0) {
+                if (valueIncrease == false && ticketCount > 0) {
                     newTicketCount = ticketCount - 1;
+                }
+                else {
+                   
+                    newTicketCount = ticketCount + 1;
 
                 }
                 document.getElementById(ticket + '-count').value = newTicketCount;
@@ -124,7 +125,7 @@
                 if (ticket == 'firstClassTicket') {
                     totalTicket = newTicketCount * 150
                 }
-                else if (ticket == 'economyClassTicket') {
+                else {
                     totalTicket = newTicketCount * 100
                 }
                 document.getElementById(ticket + '-total').innerText;
